[metadata]
name = git_cherry_pick_helper
url = https://github.com/dschwoerer/git-cherry-pick-helper
project_urls =
    Tracker = https://github.com/dschwoerer/git-cherry-pick-helper/issues
#    Documentation = https://git-cherry-pick-helper.rtfd.io
author = David Bold
author_email = davidsch@fedoraproject.org
description = Simplify cherry-picking for messy git workflows
license = GPL
python_requires = >=3.7
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
install_requires =
    numpy
    GitPython
packages = find:


[options.entry_points]
console_scripts =
    git-cherry-pick-helper=git_cherry_pick_helper:main
